# followmail

./: CHANGES.md  README.md  _config.yml  followmail.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: followmail-enhancement.md  followmail-issue.md
