[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["followmail"]

[project]
name = "followmail"
version = "1.1.0"
readme = "README.md"

authors = [{ name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" }]
maintainers = [
    { name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" },
]

description = "Postfix log parser to follow a mail address."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["tablib"]

[project.scripts]
followmail = "followmail:main"

[project.urls]
homepage = "https://github.com/MatteoGuadrini/followmail"
documentation = "https://matteoguadrini.github.io/followmail/"
changelog = "https://github.com/MatteoGuadrini/followmail/blob/main/CHANGES.md"